feat: job onboarding api connect license api